--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,14 +1,8 @@
-button:
-  about: About
-  back: Back
-  go: GO
-  home: Home
-  toggle_dark: Toggle dark mode
-  toggle_langs: Change languages
-intro:
-  desc: Opinionated Vite Starter Template
-  dynamic-route: Demo of dynamic route
-  hi: Hi, {name}!
-  aka: Also known as
-  whats-your-name: What's your name?
+navbar:
+  homepage: home
+  products: products
+  createMyProduct: create my product
+footer:
+  privacyPolicy: privacy policy
+  conditions: conditions
 not-found: Not found
