feat: add traduction

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -6,3 +6,29 @@ footer:
   privacyPolicy: politique de confidentialité
   conditions: conditions
 not-found: Page non trouvée
+ShopCar:
+ my-items: Mes articles
+ payment: Payement
+ finalize-order: finaliser ma commande
+ my-articles: Mes articles
+ Delevery: livraison
+ Validate: Valider
+
+FormConnected:
+ Login: Se connecter 
+ no-account: pas encore de compte ? Inscris toi 
+ ButtonLogin: Connexion
+ mail: email
+ password: Mot de passe
+
+FormRegiste:
+ title: S'inscrire
+ name: nom
+ first-name: prenom
+ mail: email
+ phone: telephone
+ address: addresse
+ pseudo: pseudo
+ password: mot de passe
+ confirm-password: confirmation du mot de passe
+ button-register: S'inscrire
