--- a/locales/en.yml
+++ b/locales/en.yml
@@ -6,3 +6,29 @@ footer:
   privacyPolicy: privacy policy
   conditions: conditions
 not-found: Not found
+ShopCar:
+ my-items: My items
+ payment: Payment
+ finalize-order: finalize my order
+ my-articles: my articles
+ Delevery: Delevery
+ Validate: Validate
+
+FormConnected:
+ Login: Login  
+ no-account: no account yet? register yourself
+ ButtonLogin: Login
+ mail: mail
+ password: password
+
+FormRegiste:
+ title: Register
+ name: name
+ first-name: first name
+ mail: mail
+ phone: phone
+ address: address
+ pseudo: pseudo
+ password: password
+ confirm-password: Password Confirmation
+ button-register: Register
