--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,4 +5,22 @@ navbar:
 footer:
   privacyPolicy: privacy policy
   conditions: conditions
+product:
+  orderBy:
+    label: order by
+    type:
+      updateDate: release date
+      name: nom du produit
+  filterBy:
+    label: filter by
+    type:
+      card: card
+    search: search product
+    user: only my products
+    step:
+      label: filter by product step
+      type:
+        0: being created
+        1: being validated
+        2: released
 not-found: Not found
