--- a/locales/en.yml
+++ b/locales/en.yml
@@ -68,3 +68,9 @@ card:
   onCreationSuccess: your order %{trackingNumber} has been created
   onCreationError: error when creating order
 not-found: Not found
+homepage:
+  presentation: Meteor Card is a community-created card game. You can create and play your own cards.
+  createButton: create my card
+button:
+  productList: products
+  switchLanguage: website language
