--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -68,3 +68,9 @@ card:
   onCreationSuccess: ta commande %{trackingNumber} a été crée
   onCreationError: erreur lors de la création de ta commande
 not-found: Page non trouvée
+homepage:
+  presentation: Meteor Card est un jeu de carte créé par la communauté. Tu peux créer et jouer tes propres cartes.
+  createButton: créer ma carte
+button:
+  productList: les produits
+  switchLanguage: language du site
