--- a/locales/en.yml
+++ b/locales/en.yml
@@ -68,6 +68,53 @@ form:
 card:
   onCreationSuccess: your order %{trackingNumber} has been created
   onCreationError: error when creating order
+  create:
+    title: your product
+    name: name
+    attribute: attribute
+    attributes:
+      earth: earth
+      water: water
+      fire: fire
+      wind: wind
+      light: light
+      dark: dark
+      divine: divine
+    races:
+      warrior: warrior
+      spellcaster: spellcaster
+      fairy: fairy
+      fiend: fiend
+      zombie: zombie
+      machine: machine
+      aqua: aqua
+      pyro: pyro
+      rock: rock
+    types:
+      empty: empty
+      ritual: ritual
+      fusion: fusion
+      synchro: synchro
+      xyz: xyz
+    level: stars
+    attack: attack
+    defense: defense
+    race: race
+    hasEffect: has an effect
+    description: description
+    archetype: archetype
+    backgroundPicture: main picture
+    type: type
+    limitation: limitation
+    serialNumber: serial number
+    edition: edition
+    editor: editor
+    comment:
+      title: proposal history
+      empty: you have not propose this card yet
+      validated: validated
+      notValidated: change(s) to make
+    button: propose my card
 not-found: Not found
 homepage:
   presentation: Meteor Card is a community-created card game. You can create and play your own cards.
