feat: add downloadAppButton translation

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -161,3 +161,4 @@ orders:
   creationDate: creation date
   noDatas: no orders
   paginationLabel: orders per page
+downloadAppButton: download app
