--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -161,3 +161,4 @@ orders:
   creationDate: date de création
   noDatas: pas de commandes
   paginationLabel: commandes par page
+downloadAppButton: télécharger l'app
